--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
         <h1>I'm Niv.</h1>
-        <h2>a programmer.</h2>
+        <h2>a web developer.</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
         <img src="images/mountain.png" alt="mountain-image">
     </div>
